[package]
name = "howdy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
indicatif = { version = "0.17.8", features = ["improved_unicode"] }
linereader = "0.4.0"

[[bin]]
name = "wat"
